--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Basic word scrapper." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Word Scrapper</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
