--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -2,12 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#161616" />
-    <meta name="description" content="Basic word scrapper." />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="theme-color" content="#4b5dc1" />
+    <meta
+      name="description"
+      content="Word scrapper is a basic tool that gathers grammatical information about the word that is specified."
+    />
+    <meta
+      name="keywords"
+      content="word,scrapper,wordscrapper,word-scrapper,grammar,grammatical"
+    />
+    <meta property="og:title" content="Word Scrapper" />
+    <meta
+      property="og:description"
+      content="Word scrapper is a basic tool that gathers grammatical information about the word that is specified."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:image:height" content="128" />
+    <meta property="og:image:width" content="128" />
+    <meta property="og:url" content="https://wordscrapper.xyz" />
+    <meta property="og:locale" content="en_US" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <title>Word Scrapper</title>
   </head>
   <body>
