Updated meta tags

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#4b5dc1" />
+    <meta name="theme-color" content="#6600ff" />
     <meta
       name="description"
       content="Word scrapper is a basic tool that gathers grammatical information about the word that is specified."
@@ -17,12 +17,12 @@
       property="og:description"
       content="Word scrapper is a basic tool that gathers grammatical information about the word that is specified."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/wsLogo.png" />
     <meta property="og:image:height" content="128" />
     <meta property="og:image:width" content="128" />
     <meta property="og:url" content="https://wordscrapper.xyz" />
     <meta property="og:locale" content="en_US" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/wsLogo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <title>Word Scrapper</title>
